# c3-chat

./: README.md  app.py  callbacks.py  chainlit.md  config.py  main.py  prompts.py  pyproject.toml  run.py  setup.py
.chainlit/: config.toml
src/: __init__.py
src/api/: __init__.py  claude.py  composio.py
src/controllers/: __init__.py  actions.py  chat.py
